Tehty etusivua eteenpäin

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--Meta tags-->
     <meta name="author" content="Hilla Huhtala">
-    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
     <!--Bootstrap & CSS-->
@@ -15,56 +15,101 @@
 
     <!--Import Google fonts-->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Waterfall&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fredericka+the+Great&family=WindSong:wght@500&display=swap');
     </style>
+
+    <title>Suomenhevonen - sotiemme unohdettu sankari</title>
 </head>
 
 <body>
     <!--Content-->
-    <div class="row" id="navigointi"> <!--NAVINGOINTIPALKKI-->
-        <nav class="navbar navbar-expand-xl navbar-light bg-light">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <span class="navbar-text px-3" id="navigointipalkki_otsikko">
-                    <h1 class="text-center">Suomenhevonen</h1>
-                    <p class="text-center">sotiemme unohdettu sankari</p>
-                </span>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link-active" aria-current="page" href="index.html">Etusivu</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="/html/ominaisuudet.html">Ominaisuudet</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="/html/historia.html">Historia</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="/html/jalostussuunnat.html">Jalostussuunnat</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="/html/lisatietoa.html">Lisätietoa</a>
-                        </li>
-                    </ul>            
+    <div class="content">
+    <!--NAVINGOINTI-->
+        <div class="row" id="navigointi">
+            <nav class="navbar navbar-expand-xl navbar-light">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation"><span
+                            class="navbar-toggler-icon"></span></button>
+                    <span class="navbar-text px-3" id="navigointipalkki_otsikko">
+                        <h1 class="text-center">Suomenhevonen</h1>
+                        <p class="text-center">sotiemme unohdettu sankari</p>
+                    </span>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item mx-3">
+                                <a class="nav-link-active" aria-current="page" href="index.html">Etusivu</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" href="/html/ominaisuudet.html">Ominaisuudet</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" href="/html/historia.html">Historia</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" href="/html/jalostussuunnat.html">Jalostussuunnat</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link" href="/html/lisatietoa.html">Lisätietoa</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <span class="navbar-brand">
+                        <img src="/images/icon.png" alt="" width="85">
+                    </span>
                 </div>
-                <span class="navbar-brand">
-                    <img src="/images/icon.png" alt="" height="70">
-                </span>
-            </div>
-        </nav>
-    </div>
-    <div class="row" id="header">
-        <h1>Suomenhevonen</h1>
-        <p></p>
-    </div>
-        <container class="row"></container>
-        <footer class="row"></footer>
+            </nav>
+        </div>
 
+        <!--HEADER-->
+        <div class="row px-0" id="header">
+            <div class="row px-0">
+                <div class="col px-0">
+                    <h1 class="text-center">Suomenhevonen</h1>
+                    <hr class="divider">
+                    <p class="text-center">sotiemme unohdettu sankari</p>
+                </div>
+            </div>
+        </div>
+
+        <!--SISÄLTÖ-->
+        <div class="row" id="sisalto">
+            <div class="col-xl-6">
+                <p class="text-center">Hautalöytöjen perusteella hevosia on ollut Suomen alueella jo keskirautakaudella, mutta näiden hevosten
+                    alkuperää ei tunneta. Suomenhevonen ja sitä edeltänyt suomalainen maatiaishevoskanta oli kuitenkin
+                    Suomen ainoa hevosrotu vuosisatojen ajan, joten Suomen hevoshistoria on ylipäätään miltei sama kuin
+                    suomenhevosen historia. Ensimmäiset asiakirjamerkinnät suomalaisesta hevosesta ovat 1300-luvun
+                    vaihteesta. 1500-luvulta alkaen on tietoja monien ulkomaisten lämmin- ja puoliverirotujen vaikutuksesta,
+                    jonka tuloksena oli kookkaampi ja paremmin ratsuksi soveltuva suomenhevonen. Rodun kantakirja
+                    perustettiin vuonna 1907. Suomen maatalouden koneellistuttua ja suomalaisen ratsuväen jalkauduttua
+                    1900-luvun jälkipuoliskolla suomenhevoskanta romahti yli 400 000 hevosesta alle 20 000:een. Rotu
+                    kuitenkin säilyi perinteisen raviurheilukäytön ja myöhemmin myös monipuolisten ratsuominaisuuksiensa
+                    ansiosta.</p>
+            </div>
+        <div class="row" id="valiotsikko">
+            <div class="col-xl-6">
+                <h2 class="text-center">Mitä muuta haluaisit tietää?</h2>
+            </div>
+        <div class="row" id="nappulat">
+            <div class="col-xl-6 d-flex justify-content-center">
+                <a class="btn btn-light mx-2" href="/html/ominaisuudet.html" role="button" id="ominaisuudet">Ominaisuudet</a>
+                <a class="btn btn-light mx-2" href="/html/historia.html" role="button" id="historia">Historia</a>
+                <a class="btn btn-light mx-2" href="/html/jalostussuunnat.html" role="button" id="jalostussuunnat">Jalostussuunnat</a>
+            </div>
+        </div>
+    </div>
+    <div class="row" id="footer">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center">
+                <div class="col-12 d-flex align-items-center">
+                    <span class="text-muted">© Hilla Huhtala 2021</span>
+                </div>
+            </div>
+    </div>
         <!--Bootstrap Bundle & Javascript-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
