--- a/html/ominaisuudet.html
+++ b/html/ominaisuudet.html
@@ -67,107 +67,109 @@
                 <div class="col-xl-3 mx-20">
                     <h2 class="text-left">Ominaisuudet</h2>
                 </div>
-                <div class="container-fluid" id="content-box">
-                    <div class="row">
-                        <div class="col-xl-7">
-                            <img src="../images/ominaisuudet.jpg" class="img-fluid" id="kuva">
-                        </div>
-                        <div class="col-xl-5">
-                            <div class="accordion position-relative top-50 start-50 translate-middle" id="ominaisuudet">
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="rotumaaritelma">
-                                        <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#rotuMaaritelma"
-                                            aria-expanded="true" aria-controls="rotuMaaritelma">
-                                            Rotumääritelmä
-                                        </button>
-                                    </h3>
-                                    <div id="rotuMaaritelma" class="accordion-collapse collapse show"
-                                        aria-labelledby="rotumaaritelma" data-bs-parent="#ominaisuudet">
-                                        <div class="accordion-body">
-                                            Rotumääritelmän mukaan suomenhevonen on monipuolinen ja -käyttöinen,
-                                            keskikokoinen
-                                            ja tukevarakenteinen hevonen. Ihanteellinen suomenhevonen on
-                                            monipuolinen, helposti
-                                            käsiteltävä hevonen, jossa yhdistyvät voima, ketteryys, nopeus ja
-                                            kestävyys.
-                                            Suomenhevonen on eloisa, luotettava ja valpas. Rotumääritelmän mukaan
-                                            luonteessa on
-                                            tavoiteltavaa ”rehellisyys”: yhteistyöhalukkuus, tottelevaisuus ja into
-                                            työskennellä. Suomenhevonen on kestävä, terveydeltään hyvä ja yleensä
-                                            pitkäikäinen. Rotumääritelmän mukaan suomenhevosen pää on kuiva ja
-                                            profiililtaan
-                                            suora, ei pitkä tai kupera; korvat ovat sopivan etäällä toisistaan ja
-                                            lyhyet. Kaulan
-                                            tulisi olla hyvänmuotoinen, ei joutsenkaulamainen. Rungon tulisi olla
-                                            pitkänpuoleinen, mutta pyöreämuotoinen ja sopusuhtainen. Lanteen ei
-                                            tulisi olla
-                                            tasainen tai hännän kiinnittyä liian ylös. Suomenhevoset ovat
-                                            lihaksikkaita, ja
-                                            niillä on hyvä luusto, vankat kuivat jalat sekä vahvat kaviot.
+                <div class="full.width" id="full-width-container">
+                    <div class="sisalto-boksi" id="content-box">
+                        <div class="row">
+                            <div class="col-xl-7">
+                                <img src="../images/ominaisuudet.jpg" class="img-fluid" id="kuva">
+                            </div>
+                            <div class="col-xl-5">
+                                <div class="accordion position-relative top-50 start-50 translate-middle" id="ominaisuudet">
+                                    <div class="accordion-item">
+                                        <h3 class="accordion-header" id="rotumaaritelma">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#rotuMaaritelma"
+                                                aria-expanded="true" aria-controls="rotuMaaritelma">
+                                                Rotumääritelmä
+                                            </button>
+                                        </h3>
+                                        <div id="rotuMaaritelma" class="accordion-collapse collapse show"
+                                            aria-labelledby="rotumaaritelma" data-bs-parent="#ominaisuudet">
+                                            <div class="accordion-body">
+                                                Rotumääritelmän mukaan suomenhevonen on monipuolinen ja -käyttöinen,
+                                                keskikokoinen
+                                                ja tukevarakenteinen hevonen. Ihanteellinen suomenhevonen on
+                                                monipuolinen, helposti
+                                                käsiteltävä hevonen, jossa yhdistyvät voima, ketteryys, nopeus ja
+                                                kestävyys.
+                                                Suomenhevonen on eloisa, luotettava ja valpas. Rotumääritelmän mukaan
+                                                luonteessa on
+                                                tavoiteltavaa ”rehellisyys”: yhteistyöhalukkuus, tottelevaisuus ja into
+                                                työskennellä. Suomenhevonen on kestävä, terveydeltään hyvä ja yleensä
+                                                pitkäikäinen. Rotumääritelmän mukaan suomenhevosen pää on kuiva ja
+                                                profiililtaan
+                                                suora, ei pitkä tai kupera; korvat ovat sopivan etäällä toisistaan ja
+                                                lyhyet. Kaulan
+                                                tulisi olla hyvänmuotoinen, ei joutsenkaulamainen. Rungon tulisi olla
+                                                pitkänpuoleinen, mutta pyöreämuotoinen ja sopusuhtainen. Lanteen ei
+                                                tulisi olla
+                                                tasainen tai hännän kiinnittyä liian ylös. Suomenhevoset ovat
+                                                lihaksikkaita, ja
+                                                niillä on hyvä luusto, vankat kuivat jalat sekä vahvat kaviot.
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="varit">
-                                        <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#Varit" aria-expanded="false"
-                                            aria-controls="variT">
-                                            Värit
-                                        </button>
-                                    </h3>
-                                    <div id="Varit" class="accordion-collapse collapse" aria-labelledby="variT"
-                                        data-bs-parent="#ominaisuudet">
-                                        <div class="accordion-body">
-                                            Nykyisin yli 90 prosenttia suomenhevosista on rautiaita. Liinaharja,
-                                            pään ja
-                                            jalkojen merkit ovat yleisiä. Perusvärien (rautias, ruunikko, musta)
-                                            lisäksi
-                                            rodun geenipoolissa ovat myös kimo, voikkovärit, päistärikkö, rabicano
-                                            ja
-                                            hopeavärit. Selkeä sabinokuvio (ei kuitenkaan SB1-tyypin) on melko
-                                            yleinen, joskin
-                                            se esiintyy yleensä pienimerkkisenä 1900-luvun valikoivan
-                                            värijalostuksen johdosta.
-                                            Rodun lähihistoriassa tunnetaan yksi valkoinen yksilö; se rekisteröitiin
-                                            rautiaankirjavaksi, ja sitä pidettiin ”sabinovalkoisena”. Yksittäisissä
-                                            geenitesteissä on varmistettu rodussa esiintyvän myös SW1-geeniä, joka
-                                            tuottaa
-                                            splashed white -kuvion.
+                                    <div class="accordion-item">
+                                        <h3 class="accordion-header" id="varit">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#Varit" aria-expanded="false"
+                                                aria-controls="variT">
+                                                Värit
+                                            </button>
+                                        </h3>
+                                        <div id="Varit" class="accordion-collapse collapse" aria-labelledby="variT"
+                                            data-bs-parent="#ominaisuudet">
+                                            <div class="accordion-body">
+                                                Nykyisin yli 90 prosenttia suomenhevosista on rautiaita. Liinaharja,
+                                                pään ja
+                                                jalkojen merkit ovat yleisiä. Perusvärien (rautias, ruunikko, musta)
+                                                lisäksi
+                                                rodun geenipoolissa ovat myös kimo, voikkovärit, päistärikkö, rabicano
+                                                ja
+                                                hopeavärit. Selkeä sabinokuvio (ei kuitenkaan SB1-tyypin) on melko
+                                                yleinen, joskin
+                                                se esiintyy yleensä pienimerkkisenä 1900-luvun valikoivan
+                                                värijalostuksen johdosta.
+                                                Rodun lähihistoriassa tunnetaan yksi valkoinen yksilö; se rekisteröitiin
+                                                rautiaankirjavaksi, ja sitä pidettiin ”sabinovalkoisena”. Yksittäisissä
+                                                geenitesteissä on varmistettu rodussa esiintyvän myös SW1-geeniä, joka
+                                                tuottaa
+                                                splashed white -kuvion.
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h3 class="accordion-header" id="kaytto">
-                                        <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#Kaytto" aria-expanded="false"
-                                            aria-controls="kayttO">
-                                            Käyttö
-                                        </button>
-                                    </h3>
-                                    <div id="Kaytto" class="accordion-collapse collapse" aria-labelledby="kayttO"
-                                        data-bs-parent="#ominaisuudet">
-                                        <div class="accordion-body">
-                                            Suomenhevonen on hevosrotu, jolla on sekä ratsu- että
-                                            työhevosominaisuuksia ja vaikutusta. Se on ainoa täysin Suomessa
-                                            kehitetty hevosrotu, jota kutsutaan englanniksi joskus nimityksellä
-                                            Finnish Universal (suomalainen yleishevonen), sillä sen katsotaan
-                                            sopivan liki kaikkiin hevosen käyttötarkoituksiin Suomessa: maatalous-
-                                            ja metsätöihin, raviurheiluun, ratsastukseen ja vikellykseen.
-                                            Suomenhevonen valittiin vuonna 2007 Suomen viralliseksi
-                                            kansallishevosroduksi.
+                                    <div class="accordion-item">
+                                        <h3 class="accordion-header" id="kaytto">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#Kaytto" aria-expanded="false"
+                                                aria-controls="kayttO">
+                                                Käyttö
+                                            </button>
+                                        </h3>
+                                        <div id="Kaytto" class="accordion-collapse collapse" aria-labelledby="kayttO"
+                                            data-bs-parent="#ominaisuudet">
+                                            <div class="accordion-body">
+                                                Suomenhevonen on hevosrotu, jolla on sekä ratsu- että
+                                                työhevosominaisuuksia ja vaikutusta. Se on ainoa täysin Suomessa
+                                                kehitetty hevosrotu, jota kutsutaan englanniksi joskus nimityksellä
+                                                Finnish Universal (suomalainen yleishevonen), sillä sen katsotaan
+                                                sopivan liki kaikkiin hevosen käyttötarkoituksiin Suomessa: maatalous-
+                                                ja metsätöihin, raviurheiluun, ratsastukseen ja vikellykseen.
+                                                Suomenhevonen valittiin vuonna 2007 Suomen viralliseksi
+                                                kansallishevosroduksi.
 
-                                            Suomenhevosta pidetään yhtenä maailman nopeimmista ja monipuolisimmista
-                                            kylmäveriroduista, vaikka rodun luokittelu aidoksi kylmäveriseksi on
-                                            kiistanalaista. Eri lähteiden mukaan suomenhevonen voidaan luokitella
-                                            kevyeksi kylmäveriseksi, raskaaksi lämminveriseksi tai yleishevoseksi.
-                                            Suomessa rotua ei kuitenkaan koskaan pidetä lämminverisenä.
+                                                Suomenhevosta pidetään yhtenä maailman nopeimmista ja monipuolisimmista
+                                                kylmäveriroduista, vaikka rodun luokittelu aidoksi kylmäveriseksi on
+                                                kiistanalaista. Eri lähteiden mukaan suomenhevonen voidaan luokitella
+                                                kevyeksi kylmäveriseksi, raskaaksi lämminveriseksi tai yleishevoseksi.
+                                                Suomessa rotua ei kuitenkaan koskaan pidetä lämminverisenä.
 
-                                            Suomenhevosen kantakirja jakautuu neljään jalostussuuntaan, jotka
-                                            pyrkivät kehittämään rotua eri tyyppeinä: raskaanpuoleisena työhevosena,
-                                            kevyenä ravurina, monipuolisena ratsuhevosena sekä sopusuhtaisen pienenä
-                                            pienhevosena. Jalostussuunnille yhteinen rotumääritelmä määrittelee
-                                            suomenhevosen voimakkaaksi, monipuoliseksi ja miellyttäväluonteiseksi.
+                                                Suomenhevosen kantakirja jakautuu neljään jalostussuuntaan, jotka
+                                                pyrkivät kehittämään rotua eri tyyppeinä: raskaanpuoleisena työhevosena,
+                                                kevyenä ravurina, monipuolisena ratsuhevosena sekä sopusuhtaisen pienenä
+                                                pienhevosena. Jalostussuunnille yhteinen rotumääritelmä määrittelee
+                                                suomenhevosen voimakkaaksi, monipuoliseksi ja miellyttäväluonteiseksi.
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -186,6 +188,8 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                 crossorigin="anonymous"></script>
+        </div>
+    </div>
 </body>
 
 </html>
