Muokattu jalostussuunnat ja lisätietoja -sivuja

--- a/html/lisatietoa.html
+++ b/html/lisatietoa.html
@@ -64,34 +64,32 @@
         <!--SISÄLTÖ-->
         <div class="row" id="sisalto">
             <div class="row">
-                <div class="col-xl-3 mx-20">
-                    <h2 class="text-left">Lisätietoa</h2>
-                </div>
-                <div class="full.width" id="full-width-container">
-                    <div class="sisalto-boksi" id="content-box">
-                        <div class="row">
-                            <div class="col">
-                                <p>Sivusto on toteutettu osana informaatioteknologian opiskeluja syksyn 2021 ja kevään
-                                    2022 aikana.
-                                    Sivuston pääasiallisena tarkoituksena on opetella käyttämään erilaisia
-                                    web-tekniikoita. Tällä sivustolla
-                                    on käytetty muotoilun apuna <a href="https://getbootstrap.com/">Bootstrap</a>
-                                    työkaluja, sekä <a href="https://sass-lang.com/">Sass</a> -tyylittelyjä.
-                                </p>
-                            </div>
-                            <div class="col">
-                                <h2 class="text-center" id="otsikko1">Lähteet</h2>
-                                <p class="text-center">Taustakuva - <a href="https://www.patterncooler.com/">Patterncooler</a></br>
-                                    Hevoskuvat - Oma kirjasto(Useita kuvaajia)</br>
-                                    Teksti - <a href="https://fi.wikipedia.org/wiki/Suomenhevonen">Wikipedia</a> ja <a
-                                        href="https://www.suomenhevonen.fi/">Suomenhevonen.fi</a>
-                                </p>
-                            </div>
-                        </div>
+                <div class="col-xl-5 mx-20">
+                    <h2 class="text-left">Lisätietoa</h2>   
+                        <p class="text-center">Sivusto on toteutettu osana informaatioteknologian opiskeluja syksyn 2021 ja kevään
+                        2022 aikana.
+                        Sivuston pääasiallisena tarkoituksena on opetella käyttämään erilaisia
+                        web-tekniikoita. Tällä sivustolla
+                        on käytetty muotoilun apuna <a href="https://getbootstrap.com/">Bootstrap</a>
+                        työkaluja, sekä <a href="https://sass-lang.com/">Sass</a> -tyylittelyjä.
+                        </p>
 
-                    </div>
+                    <h2 class="text-left">Lähteet</h2>
+                        <p class="text-center">Taustakuva - <a href="https://www.patterncooler.com/">Patterncooler</a></br>
+                         Hevoskuvat - Oma kirjasto(Useita kuvaajia)</br>
+                        Teksti - <a href="https://fi.wikipedia.org/wiki/Suomenhevonen">Wikipedia</a> ja <a
+                        href="https://www.suomenhevonen.fi/">Suomenhevonen.fi</a>
+                        </p>
+                        
+                    <h2 class="text-left">Linkit</h2>
+                        <p class="text-center">
+                            <a href="">jokulinkki</a></br>
+                            <a href="">jokulinkki</a></br>
+                            <a href="">jokulinkki</a></br>
+                        </p>
                 </div>
             </div>
+        </div>
 
             <footer class="d-flex flex-wrap justify-content-between align-items-center">
                 <div class="col-12 d-flex align-items-center">
